Example of solving PDE with stochastic processes

--- a/solving pde with stochastic processes.ipynb
+++ b/solving pde with stochastic processes.ipynb
@@ -39,6 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "![heat rod gif](anim.gif)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
