--- a/solving pde with stochastic processes.ipynb
+++ b/solving pde with stochastic processes.ipynb
@@ -41,7 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![heat rod gif](anim.gif)"
+    "![heat rod gif](assests/anim.gif)"
    ],
    "metadata": {
     "collapsed": false
